# wordle-solve

./: Cargo.toml  README.md  full-test.md  words
src/: main.rs
