[package]
name = "wordle-solve"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
elsa = "1.8.0"
hex = "0.4.3"
indicatif = { version = "0.17.3", features = ["rayon"] }
lazy_static = "1.4.0"
rayon = "1.6.1"
serde_json = "1.0.94"
sha2 = "0.10.6"
